--- a/public/manifest.json
+++ b/public/manifest.json
@@ -6,8 +6,62 @@
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#059669",
-  "orientation": "any",
+  "orientation": "portrait-primary",
   "icons": [
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "57x57",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "60x60",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "72x72",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "76x76",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "114x114",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "120x120",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "144x144",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "152x152",
+      "type": "image/webp",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/antisana1.webp",
+      "sizes": "180x180",
+      "type": "image/webp",
+      "purpose": "any"
+    },
     {
       "src": "/assets/images/antisana1.webp",
       "sizes": "192x192",
@@ -25,5 +79,8 @@
   "scope": "/",
   "lang": "es-EC",
   "dir": "ltr",
-  "prefer_related_applications": false
+  "prefer_related_applications": false,
+  "apple": {
+    "statusBarStyle": "black-translucent"
+  }
 }
