--- a/public/manifest.json
+++ b/public/manifest.json
@@ -9,69 +9,51 @@
   "orientation": "portrait-primary",
   "icons": [
     {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "57x57",
-      "type": "image/webp",
+      "src": "/assets/images/iconfinal.png",
+      "sizes": "48x48",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "60x60",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "/assets/images/antisana1.webp",
+      "src": "/assets/images/iconfinal.png",
       "sizes": "72x72",
-      "type": "image/webp",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "76x76",
-      "type": "image/webp",
+      "src": "/assets/images/iconfinal.png",
+      "sizes": "96x96",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "114x114",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "120x120",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "/assets/images/antisana1.webp",
+      "src": "/assets/images/iconfinal.png",
       "sizes": "144x144",
-      "type": "image/webp",
+      "type": "image/png",
       "purpose": "any"
     },
     {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "152x152",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "/assets/images/antisana1.webp",
-      "sizes": "180x180",
-      "type": "image/webp",
-      "purpose": "any"
-    },
-    {
-      "src": "/assets/images/antisana1.webp",
+      "src": "/assets/images/iconfinal.png",
       "sizes": "192x192",
-      "type": "image/webp",
+      "type": "image/png",
       "purpose": "any maskable"
     },
     {
-      "src": "/assets/images/antisana1.webp",
+      "src": "/assets/images/iconfinal.png",
+      "sizes": "256x256",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/iconfinal.png",
+      "sizes": "384x384",
+      "type": "image/png",
+      "purpose": "any"
+    },
+    {
+      "src": "/assets/images/iconfinal.png",
       "sizes": "512x512",
-      "type": "image/webp",
+      "type": "image/png",
       "purpose": "any maskable"
     }
   ],
@@ -80,6 +62,10 @@
   "lang": "es-EC",
   "dir": "ltr",
   "prefer_related_applications": false,
+  "display_override": ["window-controls-overlay", "standalone"],
+  "edge_side_panel": {
+    "preferred_width": 400
+  },
   "apple": {
     "statusBarStyle": "black-translucent"
   }
